--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Friends - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -27,19 +27,18 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Friends</h1>
+      <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span class="relatived"
+          ><div class="notification_dot nd-small">.</div>
+          <i class="fas fa-cog fa-lg"></i
+        ></span>
       </div>
     </header>
-    <a id="friends-display-link" href=""
-      ><i class="fas fa-info-circle"></i> Friends' Names Display
-      <i class="fas fa-chevron-right fa-xs"></i
-    ></a>
 
-    <main class="friends-screen">
+    <div class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -48,48 +47,46 @@
           />
           <div class="user-component__text">
             <h4 class="user-component__title">DohaLee</h4>
-            <!-- <h6 class="user-component__subtitle">this text whatever.</h6> -->
+            <h6 class="user-component__subtitle">
+              + 787 666 999<span class="user-component_subtitle-caution"
+                ><i class="fas fa-exclamation-circle"></i
+              ></span>
+            </h6>
           </div>
         </div>
-        <div class="user-component__column"></div>
-      </div>
-      <div class="friends-screen__channel">
-        <div class="friends-screen__channel-header">
-          <span>Channel</span>
-          <i class="fas fa-chevron-up fa-xs"></i>
-        </div>
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              src="https://avatars.githubusercontent.com/u/49400942"
-              class="user-component__avatar user-component__avatar--sm"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-              <!-- <h6 class="user-component__subtitle">this text whatever.</h6> -->
-            </div>
-          </div>
-          <div class="user-component__column">
-            <div>
-              <span>2<i class="fas fa-chevron-right fa-xs"></i></span>
-            </div>
-          </div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
         </div>
       </div>
-    </main>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="fas fa-qrcode"></i>
+          <span>Calendar</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-address-book"></i>
+          <span>Talk Drive</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-fingerprint"> </i>
+          <span>Emoticons</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-envelope"> </i>
+          <span>Themes</span>
+        </div>
+      </div>
+    </div>
 
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
           <a class="nav__link" href="friends.html"
-            ><i class="fas fa-user fa-2x"></i
+            ><i class="far fa-user fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
