--- a/more.html
+++ b/more.html
@@ -33,12 +33,12 @@
         <span><i class="fas fa-music fa-lg"></i></span>
         <span class="relatived"
           ><div class="notification_dot nd-small">.</div>
-          <i class="fas fa-cog fa-lg"></i
-        ></span>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i
+        ></a></span>
       </div>
     </header>
 
-    <div class="main-screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -60,23 +60,40 @@
       </div>
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fas fa-qrcode"></i>
+          <i class="far fa-calendar"></i>
           <span>Calendar</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-address-book"></i>
-          <span>Talk Drive</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fas fa-fingerprint"> </i>
+          <i class="far fa-smile-beam"></i>
           <span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
-          <i class="far fa-envelope"> </i>
+          <i class="fas fa-paint-roller"> </i>
           <span>Themes</span>
         </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-file-invoice-dollar"> </i>
+          <span>Account</span>
+        </div>
       </div>
-    </div>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fas fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
