--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="chats.html">
           <i class="fas fa-angle-left fa-3x"></i>
         </a>
       </div>
@@ -57,7 +57,6 @@
           </div>
         </div>
       </div>
-
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
@@ -68,6 +67,21 @@
       </div>
     </main>
 
+    <form class="reply" action="">
+      <div class="reply__column">
+        <i class="far fa-plus-square fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" class="type" placeholder="Write a message..." />
+        <i class="far fa-smile-wink fa-lg"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
+    <div id="no-mobile">
+      <span>Your screen is too big!</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
       crossorigin="anonymous"
