--- a/chat.html
+++ b/chat.html
@@ -15,7 +15,7 @@
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -33,7 +33,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">DohaLee</h1>
+        <h1 class="alt-header__title">Nicolas</h1>
       </div>
       <div class="alt-header__column">
         <span>
@@ -48,11 +48,11 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, June 30, 2020</div>
       <div class="message-row">
-        <img src="https://avatars.githubusercontent.com/u/49400942" />
+        <img src="https://avatars.githubusercontent.com/u/3612017?v=4" />
         <div class="message-row__content">
-          <span class="message__author">DohaLee</span>
+          <span class="message__author">Nicolas</span>
           <div class="message__info">
-            <span class="message__bubble">Hi</span>
+            <span class="message__bubble">Thank you for the Kimchi.</span>
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -60,8 +60,26 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Nice to meet you!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">Isn't it salty?</span>
+            <span class="message__time">21:29</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img src="https://avatars.githubusercontent.com/u/3612017?v=4" />
+        <div class="message-row__content">
+          <span class="message__author">Nicolas</span>
+          <div class="message__info">
+            <span class="message__bubble">Nope.</span>
+            <span class="message__time">21:30</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Send me some coins.</span>
+            <span class="message__time">21:42</span>
           </div>
         </div>
       </div>
@@ -81,6 +99,9 @@
     </form>
     <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
