--- a/more.html
+++ b/more.html
@@ -15,7 +15,7 @@
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -30,11 +30,11 @@
       <h1 class="screen-header__title">More</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fab fa-500px fa-lg"></i></span>
         <span class="relatived"
           ><div class="notification_dot nd-small">.</div>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i
-        ></a></span>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="user-component__column">
-          <i class="far fa-comment-alt fa-2x"></i>
+          <i class="far fa-comment-alt fa-2x fnt-grayer"></i>
         </div>
       </div>
       <div class="icon-row">
@@ -81,15 +81,15 @@
         <div class="more-suggestions__icons">
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-globe-europe"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Ada</span>
           </div>
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fas fa-quote-right"></i>
+              <i class="fas fa-adjust"></i>
             </div>
-            <span class="more-suggestions__icon-text">Kokoa Story</span>
+            <span class="more-suggestions__icon-text">Tezos</span>
           </div>
         </div>
       </div>
@@ -122,6 +122,9 @@
     </nav>
     <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
