--- a/chats.html
+++ b/chats.html
@@ -15,7 +15,7 @@
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -30,25 +30,24 @@
       <h1 class="screen-header__title">Chats</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><i class="fab fa-500px fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
     <main class="main-screen">
       <a href="chat.html">
-        <div class="user-component">
+        <div class="user-component hoverscale">
           <div class="user-component__column">
             <img
-              src="https://avatars.githubusercontent.com/u/49400942"
+              src="https://avatars.githubusercontent.com/u/3612017?v=4"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">DohaLee</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
-              </h6>
+              <h4 class="user-component__title">Nicolas</h4>
+              <h6 class="user-component__subtitle">Send me some coins.</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -87,6 +86,9 @@
     </nav>
     <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
