--- a/find.html
+++ b/find.html
@@ -15,7 +15,7 @@
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -32,7 +32,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span class="relatived"
           ><div class="notification_dot nd-small">.</div>
-          <i class="fas fa-cog fa-lg"></i
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
         ></span>
       </div>
     </header>
@@ -51,10 +51,6 @@
           <i class="fas fa-fingerprint"> </i>
           <span>Add by ID</span>
         </div>
-        <div class="icon-row__icon">
-          <i class="far fa-envelope"> </i>
-          <span>Invite</span>
-        </div>
       </div>
       <div class="recommended-friends">
         <h6 class="recommended-friends__title">Recommended Friends</h6>
@@ -69,20 +65,24 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#Elon_Musk</h5>
+            <h6 class="open-post__hashtags">
+              #Technoking#Tesla#Imperator#Mars
+            </h6>
             <div class="open-post__members">
               <img src="https://avatars.githubusercontent.com/u/49400942" />
-              <span class="open-post__member-count">802 members</span>
+              <span class="open-post__member-count">7 billion members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="https://avatars.githubusercontent.com/u/49400942" />
+              <img
+                src="https://cdn.images.express.co.uk/img/dynamic/22/590x/dogecoin-price-elon-musk-doge-dogecoin-value-crypto-evg-1423053.webp?r=1618555641480"
+              />
               <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i><span>326</span>
+                <i class="fas fa-heart fa-xs"></i><span>299,792,458</span>
               </div>
             </div>
           </div>
@@ -117,6 +117,9 @@
     </nav>
     <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
