--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     ></script>
   </head>
   <body>
-    <div class="status-bar">
+    <div class="status-bar index">
       <div class="status-bar__column">
         <span>No Service</span>
         <i class="fas fa-wifi"></i>
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -30,21 +30,44 @@
       </div>
     </div>
 
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-      <p class="welcome-header__text">
-        If you have a Kokoa Account, log in with your email or phone number.
-      </p>
-    </header>
+    <main>
+      <header class="welcome-header">
+        <h1 class="fnt-ani welcome-header__title">
+          Welcome to Deep Kokoa Clone
+        </h1>
+        <p class="welcome-header__text">
+          If you have a Deep Account, log in with your deep-wallet adress.
+        </p>
+      </header>
 
-    <form action="friends.html" method="get" id="login-form">
-      <input name="username" type="text" placeholder="Email or phone number" />
-      <input name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <a href="#">Find Kokoa Account or Password</a>
-    </form>
-        <div id="no-mobile">
+      <form action="friends.html" method="get" id="login-form">
+        <input
+          class="fnt-ani"
+          name="username"
+          type="text"
+          required
+          minlength="18"
+          maxlength="18"
+          placeholder="Deep-wallet adress"
+        />
+        <input
+          class="fnt-ani"
+          name="password"
+          type="password"
+          minlength="6"
+          maxlength="6"
+          required
+          placeholder="6-primary password"
+        />
+        <input type="submit" value="Log In" />
+        <a href="#">Find Deep Account or Password</a>
+      </form>
+    </main>
+    <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
   </body>
 </html>
