--- a/settings.html
+++ b/settings.html
@@ -15,7 +15,7 @@
         <!--To Do: Wifi Icon-->
       </div>
       <div class="status-bar__column">
-        <span>18:43</span>
+        <span>69:74</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
@@ -28,7 +28,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="friends.html">
           <i class="fas fa-angle-left fa-3x"></i>
         </a>
       </div>
@@ -52,7 +52,7 @@
         <li class="settings-list__setting">
           <div class="settings-list__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Kakao Lab</span>
+            <span>Deep Lab</span>
           </div>
           <div class="settings-list__setting-column"></div>
         </li>
@@ -63,6 +63,15 @@
           </div>
           <div class="settings-list__setting-column">Latest Version</div>
         </li>
+        <a href="index.html">
+          <li class="settings-list__setting">
+            <div class="settings-list__setting-column">
+              <i class="fas fa-allergies"></i>
+              <span>Log Out</span>
+            </div>
+            <div class="settings-list__setting-column"></div>
+          </li>
+        </a>
       </ul>
     </main>
 
@@ -93,6 +102,9 @@
     </nav>
     <div id="no-mobile">
       <span>Your screen is too big!</span>
+    </div>
+    <div id="no-portrait">
+      <span>Please Turn your phone Portrait mode.</span>
     </div>
     <script
       src="https://kit.fontawesome.com/bb8ee48338.js"
