--- a/more.html
+++ b/more.html
@@ -31,10 +31,12 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fab fa-500px fa-lg"></i></span>
-        <span class="relatived"
-          ><div class="notification_dot nd-small">.</div>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+        <a href="settings.html">
+          <span class="relatived">
+            <i class="fas fa-cog fa-lg"></i>
+            <div class="notification_dot nd-small">.</div>
+          </span>
+        </a>
       </div>
     </header>
 
