--- a/find.html
+++ b/find.html
@@ -30,10 +30,12 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span class="relatived"
-          ><div class="notification_dot nd-small">.</div>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
-        ></span>
+        <a href="settings.html">
+          <span class="relatived">
+            <i class="fas fa-cog fa-lg"></i>
+            <div class="notification_dot nd-small">.</div>
+          </span>
+        </a>
       </div>
     </header>
 
