--- a/more.html
+++ b/more.html
@@ -33,7 +33,7 @@
         <span><i class="fab fa-500px fa-lg"></i></span>
         <a href="settings.html">
           <span class="relatived">
-            <i class="fas fa-cog fa-lg"></i>
+            <div><i class="fas fa-cog fa-lg"></i></div>
             <div class="notification_dot nd-small">.</div>
           </span>
         </a>
