--- a/find.html
+++ b/find.html
@@ -32,7 +32,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <a href="settings.html">
           <span class="relatived">
-            <i class="fas fa-cog fa-lg"></i>
+            <div><i class="fas fa-cog fa-lg"></i></div>
             <div class="notification_dot nd-small">.</div>
           </span>
         </a>
