--- a/find.html
+++ b/find.html
@@ -32,7 +32,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <a href="settings.html">
           <span class="relatived">
-            <div><i class="fas fa-cog fa-lg"></i></div>
+            <i class="fas fa-cog fa-lg"></i>
             <div class="notification_dot nd-small">.</div>
           </span>
         </a>
@@ -68,9 +68,7 @@
         <div class="open-post">
           <div class="open-post__column">
             <h5 class="open-post__title">#Elon_Musk</h5>
-            <h6 class="open-post__hashtags">
-              #Technoking#Tesla#Imperator#Mars
-            </h6>
+            <h6 class="open-post__hashtags">#Technoking#Tesla</h6>
             <div class="open-post__members">
               <img src="https://avatars.githubusercontent.com/u/49400942" />
               <span class="open-post__member-count">7 billion members</span>
